@@ -25,8 +25,8 @@
 # ***** modify the following variables according to your env *****
 #
 
-DFT_BIN=~/espresso-2.1.5/bin
-TMPDIR=/scratch/WanT
+DFT_BIN=~/espresso-3.0/bin
+TMPDIR=/scratch/benedett/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX=
